--- a/4-point.tex
+++ b/4-point.tex
@@ -67,7 +67,7 @@ This statement essentially says that the Toponogov theorem has no simple relativ
 The rest of the paper have auxiliary nature, but let us list two results that have independednt interest.
 In Section~\ref{Four-point arrays}, we prove the following version of a theorem of Abraham Wald \cite[§ 7]{wald} that describes the metrics of all possible 4-point arrays in Alexandrov spaces with nonnegative and nonpositive curvature.
 
-\begin{thmA}{Theorem}
+\begin{thmA}{Statement}
 The following three conditions are equivalent:
 \begin{enumerate}[(i)]
 \item A 4-point metric space $X$ is isometric to a subset of a length space with nonnegative (nonpositive) curvature in the sense of Alexandrov.
@@ -78,7 +78,7 @@ The following three conditions are equivalent:
 
 Further, in Section~\ref{Alexandrov's comparison} we prove that single nondegenerate inequality of negative type defines Alexandrov spaces with nonnegative and nonpositive curvature.
 
-\begin{thmA}{Theorem}
+\begin{thmA}{Statement}
 Let us consider all length spaces that satisfy the quadratic condition given by an inequality of negative type $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,\lambda_4)$.
 \begin{enumerate}[(i)]
 \item If $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4<0$, then it describes all Alexandrov spaces with nonnegative curvature.
