Updates from Overleaf

--- a/4-point.tex
+++ b/4-point.tex
@@ -41,9 +41,9 @@ An inequality of the following type
 will be called \emph{quadratic}.
 A system of quadratic intequalities will be called \emph{quadratic condition}.
 
-We will be interested in length spaces $X$ such that a given quadratic conditon holds for any $n$-point array in a metric space $X$.
+We will be interested in length spaces $X$ such that a given quadratic condition holds for any $n$-point array in a metric space $X$.
 
-As we will see, quadratic conditionons can be used to define  nonnegative and nonpositive curvature in the sense of Alexandrov.
+As we will see, quadratic conditions can be used to define  nonnegative and nonpositive curvature in the sense of Alexandrov.
 This observation motivated us to investigate the entire class of such inequalities for $n=4$.
 We certainly want to tackle the case $n>4$, but only after the simpler case $n=4$.
 
@@ -59,12 +59,12 @@ In Section~\ref{par:globalization}, we show that the globalization theorem holds
 
 \begin{thmA}{Statement}
 Suppose that a quadratic condition on 4-points satisfies the globalization property;
-that is, if this condition holds locally (in a neighborgood of any point) in a lenght space $X$ then it holds in $X$.
-Then either the condition is trival, or it describes Alexandrov spaces with nonnegative curvature.
+that is, if this condition holds locally (in a neighborhood of any point) in a length space $X$ then it holds in $X$.
+Then either the condition is trivial, or it describes Alexandrov spaces with nonnegative curvature.
 \end{thmA}
 
 This statement essentially says that the Toponogov theorem has no simple relatives.
-The rest of the paper have auxiliary nature, but let us list two results that have independednt interest.
+The rest of the paper has auxiliary nature, but let us list two results that have independent interest.
 In Section~\ref{Four-point arrays}, we prove the following version of a theorem of Abraham Wald \cite[§ 7]{wald} that describes the metrics of all possible 4-point arrays in Alexandrov spaces with nonnegative and nonpositive curvature.
 
 \begin{thmA}{Statement}
@@ -76,7 +76,7 @@ The following three conditions are equivalent:
 \end{enumerate}
 \end{thmA}
 
-Further, in Section~\ref{Alexandrov's comparison} we prove that single nondegenerate inequality of negative type defines Alexandrov spaces with nonnegative and nonpositive curvature.
+Further, in Section~\ref{Alexandrov's comparison} we prove that a single nondegenerate inequality of negative type defines Alexandrov spaces with nonnegative and nonpositive curvature.
 
 \begin{thmA}{Statement}
 Let us consider all length spaces that satisfy the quadratic condition given by an inequality of negative type $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,\lambda_4)$.
@@ -88,7 +88,7 @@ Let us consider all length spaces that satisfy the quadratic condition given by 
 
 \end{thmA}
 
-This statement shows that we might impose a relatively weak form 4-point comparison on a space with length metric that forces much stronger 4-point comparison.
+This statement shows that we might impose a relatively weak form 4-point comparison on a space with length metric that forces a much stronger 4-point comparison.
 The proof is a straightforward combination of the arguments by Takashi Sato \cite{sato} and its variation by the first two authors \cite{lebedeva-petrunin-2010};
 these papers consider particular cases
 such inequalities, namely those for the $\lambda$-arrays $(1,1,-1,-1)$ and $(1,1,1,-3)$.
