--- a/4-point.tex
+++ b/4-point.tex
@@ -47,7 +47,8 @@ As we will see, quadratic conditions can be used to define  nonnegative and nonp
 This observation motivated us to investigate the entire class of such inequalities for $n=4$.
 We certainly want to tackle the case $n>4$, but only after the simpler case $n=4$.
 
-\paragraph{Outline.}
+\section{Outline}
+
 Sections \ref{Associated form} and \ref{par:rank-one} introduce necessary definitions.
 Here we define
 the
