--- a/library.bib
+++ b/library.bib
@@ -1,3 +1,13 @@
+@inproceedings{AKP-2011,
+	author = {Alexander, S. and Kapovitch, V. and Petrunin, A.},
+	booktitle = {Proceedings of the {G}\"{o}kova {G}eometry-{T}opology {C}onference 2010},
+	mrclass = {53C23},
+	mrnumber = {2931882},
+	mrreviewer = {Koichi Nagano},
+	pages = {88--109},
+	title = {Alexandrov meets {K}irszbraun},
+	year = {2011}}
+
 @book {AKP-2024,
     AUTHOR = {Alexander, S. and Kapovitch, V. and Petrunin, A.},
      TITLE = {Alexandrov geometry---foundations},
@@ -26,6 +36,24 @@ MRREVIEWER = {Alexander\ I.\ Barvinok},
        DOI = {10.1007/978-3-642-04295-9},
        URL = {https://doi.org/10.1007/978-3-642-04295-9},
 }
+
+@article{lang-schroeder,
+	author = {Lang, U. and Schroeder, V.},
+	doi = {10.1007/s000390050018},
+	fjournal = {Geometric and Functional Analysis},
+	issn = {1016-443X},
+	journal = {Geom. Funct. Anal.},
+	mrclass = {53C23},
+	mrnumber = {1466337},
+	mrreviewer = {Zhongmin Shen},
+	number = {3},
+	pages = {535--560},
+	title = {Kirszbraun's theorem and metric spaces of bounded curvature},
+	url = {https://doi.org/10.1007/s000390050018},
+	volume = {7},
+	year = {1997},
+	bdsk-url-1 = {https://doi.org/10.1007/s000390050018}}
+
 
 @article {lebedeva-petrunin-2010,
     AUTHOR = {Lebedeva, N. and Petrunin, A.},
@@ -91,22 +119,6 @@ MRREVIEWER = {Nan\ Li},
        URL = {https://doi.org/10.1007/s00039-019-00481-9},
 }
 
-@article {lang-schroeder,
-    AUTHOR = {Lang, U. and Schroeder, V.},
-     TITLE = {Kirszbraun's theorem and metric spaces of bounded curvature},
-   JOURNAL = {Geom. Funct. Anal.},
-  FJOURNAL = {Geometric and Functional Analysis},
-    VOLUME = {7},
-      YEAR = {1997},
-    NUMBER = {3},
-     PAGES = {535--560},
-      ISSN = {1016-443X},
-   MRCLASS = {53C23},
-  MRNUMBER = {1466337},
-MRREVIEWER = {Zhongmin Shen},
-       DOI = {10.1007/s000390050018},
-       URL = {https://doi.org/10.1007/s000390050018},
-}
 
 @book {petrunin2023,
     AUTHOR = {Petrunin, Anton},
